Fixed scrollbar issue

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -45,7 +45,7 @@ header {
     /* Don't change */
     margin: 0;
     padding: 0;
-
+    
     display: flex;
     flex-direction: row;
 }
@@ -171,7 +171,7 @@ header {
         top: 4.55em;
         left: 0;
         right: 0;
-        height: 100vh;
+        height: auto;
 
         opacity: 0;
         transform: scaleY(0);
@@ -179,6 +179,10 @@ header {
         transition: 200ms transform cubic-bezier(0.36, 0.4, 0.42, 1.48) 100ms, 100ms opacity ease-in-out;
         overflow-y: scroll;
 
+    }
+    
+    .menu::-webkit-scrollbar {
+        display: none;
     }
 
     .menu > li > a {
